# .cwsc-old

./: .gitignore  BFS.json  LF.json  LICENSE  README.md  ir-code.yml  item.json  item.txt  item.yaml  output.rs  output.txt  package-lock.json  package.json  test.json  tsconfig.json  webpack.config.js
__tests__/ast/: arithmetics.test.ts  basic.test.ts  controlFlows.test.ts  functions.test.ts
__tests__/rustGen/: arithmetics.test.ts  basic.test.ts  example.contracts.test.ts
codegen-rust/: Cargo.toml
codegen-rust/src/: main.rs
coverage/: clover.xml
coverage/lcov-report/: index.html
cws-contract-outpee/: Cargo.toml
cws-contract-outpee/examples/: schema.rs
cws-contract-outpee/src/: contract.rs
cws-contract-output/: Cargo.toml
cws-contract-output/src/: lib.rs
examples/cw-template/: cw-template.cws
examples/cws-cw20/: README.md  cwsconfig.toml  cwsproject.toml
examples/empty/: empty.cws
examples/kitchen-sink/: kitchen-sink.cws
examples/project-example/: cwsproject.toml
examples/test-contract/: test-contract.cws
grammar/: CWScriptLexer.g4  CWScriptParser.g4  CWSpecLexer.g4  CWSpecParser.g4
grammar/.antlr/: CWScriptLexer.interp  CWScriptLexer.java  CWScriptLexer.js  CWScriptParser.interp  (+11 more)
my-contract-name/: Cargo.toml
my-contract-name/src/: lib.rs
src/: ast.ts  cli.ts  codegen.ts  compiler.ts  cwam.ts  cwsvm.ts  env.ts  error.ts  index.ts  ir.ts  model.ts  old_.ts  old_codegen.ts  old_rust.ts  parser.ts  run.ts  rust-lang.ts  rust.ts  tree.ts  typesystem.ts  viz.ts  vizserver.ts
test-cws-runtime/: Cargo.toml
william/: cwsproject.toml
(+86 files in other folders)
