[package]
name = "my-contract-name"
authors = [ "William Chen <william@terran.one>" ]
edition = "2018"
exclude = [ "contract.wasm", "hash.txt" ]
version = "0.1.0"

[package.metadata.scripts]
optimize = """
docker run --rm -v "$(pwd)":/code --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
schemars = "0.8.3"

  [dependencies.cosmwasm-std]
  version = "0.16.2"

  [dependencies.cosmwasm-storage]
  version = "0.16.0"

  [dependencies.serde]
  default-features = false
  features = [ "derive" ]
  version = "1.0.127"

  [dependencies.thiserror]
  version = "1.0.26"

[dev-dependencies.cosmwasm-schema]
version = "0.16.0"

[features]
backtraces = [ "cosmwasm-std/backtraces" ]
library = [ ]

[lib]
crate-type = [ "cdylib", "rlib" ]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = "abort"
rpath = false
